--- a/charts/cluster_processor_service/values.yaml
+++ b/charts/cluster_processor_service/values.yaml
@@ -20,7 +20,9 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name:
+  namespaces:
+    - app1
+    - app2
 
 podSecurityContext: {}
   # fsGroup: 2000
